assets/css/style.css
/* ... */
.slider-pro p.sp-layer {
	font-size: 16px;
	color: #A1A1A1;
	line-height: 1.4;
}

.slider-pro a {
	text-decoration: none;
	color: #444444;
	-webkit-transition: 0.5s !important;
	-moz-transition: 0.5s !important;
	transition: 0.5s !important;
}

.slider-pro .link-color {
	text-decoration: none;
	color: #111;
	-webkit-transition: 0.5s !important;
	-moz-transition: 0.5s !important;
	transition: 0.5s !important;
}

.slider-pro a:hover {
	color: #999999;
}



@media only screen and (max-width: 768px) {

	.slider-pro h2.sp-layer {
		font-size: 34px !important;

	}
}


/* -----------------------------------------------------
--------------- App Home Styling starts ----------------
--------------------------------------------------------*/


.app .hero-section {
	padding: 50px 0 0 0;
}

.app .hero-content {
	padding: 100px 0 0 0;
}

.app img {
	margin: 0 auto;
}

.app-info h1 {
  font-size: 34px;
  font-weight: 600;
  color: #8dd7ff;
  margin-top: 30px !important;
}

.app-info h4 {
  font-family: Roboto;
  font-size: 16px;
  font-weight: 300;
  color:  #fff;
	line-height: 1.4;
  margin-top: 20px;
}

.app-info i {
	margin-top: 15px;
	display: inline-block;
}

.app-info span {
  font-family: Poppins;
  font-size: 12px;
  font-weight: 400;
  color: #222222;
}

.app-info .ion {
  font-size: 1em;
  color: #ff8000;
}

.download-buttons {
  margin-top: 25px;
  margin-bottom: 25px;
}

.download-buttons img {
	margin-left: 5px;
	margin-right: 5px;
}


.app .btn-action {
	color: #FFFFFF;
	background: #3333CC;
	border-color: #3333CC;
}

.app .btn-action:hover {
	color: #3333CC;
	background: transparent;
	border-color: #3333CC;
}



/*----------------------------------------------------
-------------- Split Home Coming Soon ----------------
-----------------------------------------------------*/


.cs-main .left-section {
		background-color: #F2F2F2;
		position: absolute;
    left: 0;
		right: 0;
		top: 0;
		bottom: 0;
    width: 50%;
		height: 100%;
		overflow: hidden;
    z-index: 1;
}

.cs-main .right-section {
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
		padding: 0 20px 0 20px;
		width: 50%;
		height: 100%;
    background: #FFFFFF;
    z-index: 99;
    overflow: hidden;
    overflow-y: auto;
}

.cs-main .hero-section {
	padding: 120px 0 0 0;
	background: #9097ad !important;
}

.cs-main .hero-content {
	padding: 50px 0 0 0;
}

.cs-main .app-info h1 {
	font-weight: 600;
	font-size: 42px;
}

.cs-main .left-section {
	background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../images/split-bg.jpg) no-repeat center center;
	background-size: cover;
}
.cs-main .right-section {
	background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../images/animals.jpg) no-repeat center center;
	background-size: cover;
}


@media only screen and (max-width : 801px) {

	 .cs-main .right-section{
			position: relative;
			width: 100%;
	}

	.cs-main .hero-section {
		padding: 50px 0 0 0;
	}


	 .cs-main .left-section{
			position: relative;
			width: 100%;
			min-height: 100vh;
	}
}



/*-------------------------------------------------
----------- About Section Styling Starts ----------
--------------------------------------------------*/

.about {
	padding: 100px 0 100px 0;
	background: #F1F1F1;
}

.about-content {
	max-width: 800px;
	margin: 0 auto;
}

.about-content h2 {
	font-family: 'Josefin Sans';
	font-size: 24px;
	line-height: 1.2;
	color: #111111;
}

.about-content h3 {
	font-family: 'Josefin Sans';
	font-size: 21px;
	font-weight: bold;
	line-height: 1;
	letter-spacing: 1px;
	text-transform: capitalize;
	color: #111111;
	margin: 50px 0 0 0;
}



/* ----- Client Sectiion Styling ----- */

.client-section {
	background-color: #F3F3F3;
	padding: 5px 0 0 0;
}

.clients .single {
	padding: 25px 0 25px 0;
}

.clients .single img {
	-webkit-filter: grayscale(100%);
    filter: grayscale(100%);
		opacity: 0.3;
}


/*----------------------------------------------------
----------- Pitch Section Styling Starts ----------
-----------------------------------------------------*/


.pitch {
	padding: 100px 0 100px 0;
	background: #FFFFFF;
}

.pitch-intro {
	max-width: 600px;
	margin: 0 auto;
	padding: 0 0 100px 0;
}

.pitch-intro h1 {
	font-size: 34px;
	font-weight: 600;
	line-height: 1.2;
	letter-spacing: -1px;
	color: #454545;
	margin: 0 0 30px 0;
}


.pitch-intro p {
	font-family: 'Poppins';
	font-size: 14px;
	line-height: 1.5;
	color: #A1A1A1;
	letter-spacing: 0;
}

.pitch-icon {
	margin: 0 0 10px 0;
	background: #3333CC;
	width: 60px;
	height: 60px;
	display: inline-block;
	border-radius: 50%;
}

.pitch-icon i {
	font-size: 34px;
	color: #FFFFFF;
	position: absolute;
	left: 0;
	right: 0;
	top: 13px;
}

.pitch-content {
	padding: 10px 0 50px 0;
}

.pitch-content h1 {
	font-size: 21px;
	font-weight: 600;
	line-height: 1.2;
	letter-spacing: 0;
	color: #454545;
	margin: 0 0 10px 0;
}

.pitch-content p {
	font-family: 'Poppins';
	font-size: 14px;
	line-height: 1.5;
	color: #A1A1A1;
	letter-spacing: 0;
}


/*----------------------------------------------------
----------- Features Icon Styling Starts -------------
-----------------------------------------------------*/

.icon-features {
	padding: 100px 0 50px 0;
}

.icon-features-intro {
	padding: 0 0 50px 0;
}

.icon-features-intro h1 {
	font-size: 34px;
	font-weight: 600;
	letter-spacing: -1px;
	margin: 0 0 10px 0;
	text-align: center;
}

.icon-features-intro p {
	font-size: 16px;
	color: #A1A1A1;
	text-align: center;
	margin: 0 0 30px 0;
}

.f-single {
	position: relative;
	padding: 10px 0 80px 0;
}

.f-icon i {
	font-size: 54px;
	font-weight: bold;
	position: absolute;
	left: 0;
}

.f-content {
	padding-left: 80px;
}

.f-content h2 {
	font-size: 21px;
	font-weight: 400;
	margin: 0 0 10px 0;
}

.f-content p {
	font-family: 'Roboto';
	font-size: 14px;
	font-weight: 300;
	color: #4D4D4D;
	line-height: 1.5;
	text-align: left;
}
/* ... */

